<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#008000"
        android:text="@string/tv1_m" />

    <LinearLayout
        android:id="@+id/llDate"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:textSize="18sp"
        android:textColor="#ff4444"
        android:text="" />

        <TextClock
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:id="@+id/textClock" />
    </LinearLayout>

        <LinearLayout
            android:id="@+id/llBtn"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#008000"
            android:drawableLeft="@drawable/btn_add"
            android:text="@string/btnAdd" />

        <Button
            android:id="@+id/btnDel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#ff4444"
            android:drawableLeft="@drawable/btn_del"
            android:text="@string/btnDel" />

        <Button
            android:id="@+id/btnDelAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#ff4444"
            android:drawableLeft="@drawable/btn_del_all"
            android:text="@string/btnDelAll" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView_1"
        android:fillViewport="false">
        <LinearLayout
            android:id="@+id/llMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fffac7"
            android:orientation="vertical">
        </LinearLayout>
    </ScrollView>

</LinearLayout>