<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#008000"
        android:text="@string/tv1_er" />

    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinExercise" />

    <LinearLayout
        android:id="@+id/llBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnExerrcise"
            android:textColor="#008000"
            android:id="@+id/btnExercise" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ff4444"
            android:layout_weight="1"
            android:text="@string/btnClear"
            android:id="@+id/btnClear" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#ff4444"
        android:id="@+id/tvExercise" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView_1">

        <LinearLayout
            android:id="@+id/llMainResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fffac7"
            android:orientation="vertical">
        </LinearLayout>
    </ScrollView>



</LinearLayout>
